added otp functionality and send email functionLITY